now column width can be passed trough data attribute

--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
     "extra": {
         "laravel": {
             "providers": [
-                "DavideCasiraghi\\ResponsiveGallery\\GalleryServiceProvider"
+                "DavideCasiraghi\\ResponsiveGallery\\ResponsiveGalleryServiceProvider"
             ],
             "aliases": {
                 "Gallery": "DavideCasiraghi\\ResponsiveGallery\\Facades\\Gallery"
