added .scrutinizer.yml configuration file

--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -19,6 +19,11 @@ checks:
 
 build:
   nodes:
+    analysis:
+      tests:
+        override:
+            - php-scrutinizer-run
+            - js-scrutinizer-run
     coverage:
       tests:
         override:
