--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -31,6 +31,6 @@ build:
         override:
           - command: './vendor/bin/phpunit --coverage-clover=coverage'
             coverage:
-              file: build/logs/clover.xml   # <- Set this to where we find the coverage data.
+              file: logs/clover.xml   # <- Set this to where we find the coverage data.
                                           #    The path is relative to the current directory.
               format: php-clover
