--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -26,8 +26,19 @@
         <log type="coverage-clover" target="build/logs/clover.xml"/>
     </logging>
     <php>
-        <env name="DB_CONNECTION" value="testing"/>
+        <!--<env name="DB_CONNECTION" value="testing"/>
         <env name="APP_KEY" value="AckfSECXIvnK5r28GVIWUAxmbBSjTsmF"/>
-        <env name="APP_NAME" value="Testapp"/>
+        <env name="APP_NAME" value="Testapp"/>-->
+        
+       <env name="APP_KEY" value="AckfSECXIvnK5r28GVIWUAxmbBSjTsmF"/>
+       <env name="APP_NAME" value="Testapp"/>
+       <env name="DB_CONNECTION" value="sqlite"/>
+       <env name="DB_DATABASE" value=":memory:"/> 
+       
+       <env name="APP_ENV" value="testing"/>
+       <env name="CACHE_DRIVER" value="array"/>
+       <env name="SESSION_DRIVER" value="array"/>
+       <env name="QUEUE_DRIVER" value="sync"/>
+
     </php>
 </phpunit>
