--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -35,6 +35,8 @@
        <env name="DB_CONNECTION" value="sqlite"/>
        <env name="DB_DATABASE" value=":memory:"/> 
        
+       <env name="APP_DEBUG" value="true"/> 
+       
        <env name="APP_ENV" value="testing"/>
        <env name="CACHE_DRIVER" value="array"/>
        <env name="SESSION_DRIVER" value="array"/>
