--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^8.0",
-        "orchestra/testbench": "~3.0"
+        "orchestra/testbench": "^4.0"
     },
     "extra": {
         "laravel": {
